--- a/Monroe_biosite.html
+++ b/Monroe_biosite.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shanique Hordge Home</title>
+    <title>Monroe_bioSite</title>
+    <link rel="stylesheet" href="Monroe_bioSite.css"> <!-- Add this line to link the CSS file -->
     <style>
+        /* Your inline styles can go here if needed */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
