--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Shanique Hordge</title>
+    <link rel="stylesheet" href="Monroe_bioSite.css"> <!-- Add this line to link the CSS file -->
     <style>
+        /* Your inline styles can go here if needed */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
@@ -42,7 +44,7 @@
 <body>
     <h1>About Shanique Hordge</h1>
     <p>
-       Shanique Hordge, at the age of 28, stands as an educated and articulate individual, currently serving as a director for Catholic Charities. Balancing her professional commitments, she is a few hours away from completing her master’s degree—a testament 
+        Shanique Hordge, at the age of 28, stands as an educated and articulate individual, currently serving as a director for Catholic Charities. Balancing her professional commitments, she is a few hours away from completing her master’s degree—a testament 
       to her commitment to continuous learning. Shanique is not only dedicated to her career but is also a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
       close ones. 
  
@@ -60,13 +62,16 @@
  
       Looking ahead, Shanique's goals include expanding her family, completing her master’s degree, and eventually building her dream home in North Carolina. Through her inspiring journey, Shanique exemplifies resilience, determination, and a commitment to making 
     a positive impact on the lives of others.  
-
     </p>
     <img src="photo1.jpg" alt="Photo 1">
     <img src="photo2.jpg" alt="Photo 2">
     <img src="photo3.jpg" alt="Photo 3">
     <p>
-        For more information, please visit <a href="Monroe_bioSite.html">bioSite</a>.
+        For more information, please visit my <a href="Monroe_bioSite.html">bioSite</a>.
     </p>
 </body>
 </html>
+
+
+
+
