--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shanique's Hobbies</title>
+    <link rel="stylesheet" href="Monroe_bioSite.css"> <!-- Add this line to link the CSS file -->
     <style>
+        /* Your inline styles can go here if needed */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
@@ -42,10 +44,11 @@
 <body>
     <h1>Shanique's Hobbies</h1>
     <p>
-        In my free time, I enjoy pursuing various hobbies. Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit. Sed suscipit velit nec enim pharetra, et maximus dolor
-        feugiat. Quisque eu scelerisque odio. Proin tincidunt luctus facilisis. Nulla facilisi.
-        Donec ullamcorper velit eu tellus luctus, vel suscipit tortor fermentum.
+           Shanique Hordge is a devoted individual who finds immense joy in her relationships with family and friends. Her love for them is unwavering, and she can 
+        often be found celebrating life's moments and providing unwavering support in every aspect of their lives. Beyond her close connections, Shanique has a 
+        passion for travel, exploring numerous clandestined locales during her scheduled vacations. Amid her diverse hobbies, she cherishes the simplicity of 
+        sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
+        reflecting her dedication to the activities that bring her joy. 
     </p>
     <img src="hobby1.jpg" alt="Hobby 1">
     <img src="hobby2.jpg" alt="Hobby 2">
@@ -55,3 +58,9 @@
     </p>
 </body>
 </html>
+
+
+
+
+
+
