--- a/Monroe_biosite.html
+++ b/Monroe_biosite.html
@@ -33,10 +33,20 @@
         a:hover {
             text-decoration: underline;
         }
+
+        /* Add a style for the image */
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
     <h1>Thank you for visiting!</h1>
+    
+    <!-- Add your hosted image here -->
+    <img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Thank You Photo">
+
     <h2>Important Links</h2>
     <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
 </body>
