--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -63,9 +63,9 @@
       Looking ahead, Shanique's goals include expanding her family, completing her master’s degree, and eventually building her dream home in North Carolina. Through her inspiring journey, Shanique exemplifies resilience, determination, and a commitment to making 
     a positive impact on the lives of others.  
     </p>
-    <img src="photo1.jpg" alt="Photo 1">
-    <img src="photo2.jpg" alt="Photo 2">
-    <img src="photo3.jpg" alt="Photo 3">
+    <img src="C:\Users\dmonr\Downloads\AboutMe1.jpg" alt="AboutMe1">
+    <img src="C:\Users\dmonr\Downloads\AboutMe2.jpg" alt="AboutMe2">
+    <img src="C:\Users\dmonr\Downloads\AboutMe3.jpg" alt="AboutMe3">
     <p>
         For more information, please visit my <a href="Monroe_bioSite.html">bioSite</a>.
     </p>
