--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -50,9 +50,9 @@
         sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
         reflecting her dedication to the activities that bring her joy. 
     </p>
-    <img src="hobby1.jpg" alt="Hobby 1">
-    <img src="hobby2.jpg" alt="Hobby 2">
-    <img src="hobby3.jpg" alt="Hobby 3">
+    <img src="C:\Users\dmonr\Downloads\Hobbies1.jpg" alt="Hobby 1">
+    <img src="C:\Users\dmonr\Downloads\Hobbies2.jpg" alt="Hobby 2">
+    <img src="C:\Users\dmonr\Downloads\Hobbies3.jpg" alt="Hobby 3">
     <p>
         If you're interested in learning more, feel free to visit my <a href="Monroe_bioSite.html">bioSite</a>.
     </p>
