--- a/Monroe_biosite.html
+++ b/Monroe_biosite.html
@@ -16,6 +16,12 @@
             text-align: center;
         }
 
+        header, footer {
+            background-color: #007bff;
+            color: #ffffff;
+            padding: 10px;
+        }
+
         h1 {
             color: #007bff;
         }
@@ -38,16 +44,35 @@
         img {
             max-width: 100%;
             height: auto;
+            margin: 10px auto; /* Center and add margin */
+        }
+
+        main {
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff; /* White background for the main content */
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-    <h1>Thank you for visiting!</h1>
-    
-    <!-- Add your hosted image here -->
-    <img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Thank You Photo">
+    <header>
+        <h1>Welcome, to the home page.</h1>
+    </header>
 
-    <h2>Important Links</h2>
-    <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
+    <main>
+        <h1>Thank you for visiting!</h1>
+        
+        <!-- Add your hosted image here -->
+        <img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Thank You Photo">
+
+        <h2>Important Links</h2>
+        <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
+    </main>
+
+    <footer>
+        <p>Thank you for taking the time to get a little about Shanique Hordge-Monroe</p>
+    </footer>
 </body>
 </html>
