--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -16,6 +16,12 @@
             text-align: center;
         }
 
+        header, footer {
+            background-color: #007bff;
+            color: #ffffff;
+            padding: 10px;
+        }
+
         h1 {
             color: #007bff;
         }
@@ -28,7 +34,8 @@
         img {
             max-width: 100%;
             height: auto;
-            margin: 10px;
+            margin: 10px auto; /* Center and add margin */
+            display: block;
         }
 
         a {
@@ -42,35 +49,31 @@
     </style>
 </head>
 <body>
-    <h1>About Shanique Hordge</h1>
-    <p>
-        Shanique Hordge, at the age of 28, stands as an educated and articulate individual, currently serving as a director for Catholic Charities. Balancing her professional commitments, she is a few hours away from completing her master’s degree—a testament 
-      to her commitment to continuous learning. Shanique is not only dedicated to her career but is also a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
-      close ones. 
- 
-      Growing up in a small town as the youngest of four children, Shanique's perspective on life was shaped by the strong work ethic of her father, her primary role model. Inspired by his dedication to providing for the family, Shanique adopted a similar work 
-    ethic, excelling in both her academic pursuits and her professional career. Transparency and effective communication are principles that guide her, making her known for her straightforwardness and ability to address situations without sugarcoating. 
- 
-      Pivotal moments, such as a tragic house fire on Christmas Eve four years ago, served as turning points in Shanique's life. The community's support during this challenging time reinforced her belief in the importance of community and compassion. Her journey 
-    includes significant accomplishments, such as being promoted to a director's position, the birth of her son, and nearing the completion of her master’s degree. 
- 
-      While Shanique acknowledges the challenges and regrets that everyone faces, she believes that her past decisions have paved the way for her current success. Education has always been her niche, and her career evolution within Catholic Charities reflects her 
-    passion for working closely with people. 
- 
-      In her pursuit of balance between personal and professional life, Shanique turns to her family for support. Open communication and expressing her needs have been valuable lessons along her journey. Key individuals, including her parents, friends, and fiancé, 
-    have played crucial roles, both positively and negatively, shaping Shanique's life journey. 
- 
-      Looking ahead, Shanique's goals include expanding her family, completing her master’s degree, and eventually building her dream home in North Carolina. Through her inspiring journey, Shanique exemplifies resilience, determination, and a commitment to making 
-    a positive impact on the lives of others.  
-    </p>
-    <img src="C:\Users\dmonr\Downloads\AboutMe1.jpg" alt="AboutMe1">
-    <img src="C:\Users\dmonr\Downloads\AboutMe2.jpg" alt="AboutMe2">
-    <img src="C:\Users\dmonr\Downloads\AboutMe3.jpg" alt="AboutMe3">
-    <p>
-        For more information, please visit my <a href="Monroe_bioSite.html">bioSite</a>.
-    </p>
+    <header>
+        <h1>YWelcome to the About Me portion of the site.</h1>
+    </header>
+
+    <main>
+        <h1>About Shanique Hordge</h1>
+        <p>
+            Shanique Hordge, at the age of 28, stands as an educated and articulate individual, currently serving as a director for Catholic Charities. Balancing her professional commitments, she is a few hours away from completing her master’s degree—a testament 
+          to her commitment to continuous learning. Shanique is not only dedicated to her career but is also a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
+          close ones. 
+        </p>
+        <img src="C:\Users\dmonr\Downloads\AboutMe1.jpg" alt="AboutMe1">
+        <img src="C:\Users\dmonr\Downloads\AboutMe2.jpg" alt="AboutMe2">
+        <img src="C:\Users\dmonr\Downloads\AboutMe3.jpg" alt="AboutMe3">
+        <p>
+            For more information, please visit my <a href="Monroe_bioSite.html">bioSite</a>.
+        </p>
+    </main>
+
+    <footer>
+        <p>There's more to share, just head over to My Hobbies!</p>
+    </footer>
 </body>
 </html>
+
 
 
 
