--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -16,6 +16,12 @@
             text-align: center;
         }
 
+        header, footer {
+            background-color: #007bff;
+            color: #ffffff;
+            padding: 10px;
+        }
+
         h1 {
             color: #007bff;
         }
@@ -28,7 +34,8 @@
         img {
             max-width: 100%;
             height: auto;
-            margin: 10px;
+            margin: 10px auto; /* Center and add margin */
+            display: block;
         }
 
         a {
@@ -42,25 +49,29 @@
     </style>
 </head>
 <body>
-    <h1>Shanique's Hobbies</h1>
-    <p>
-           Shanique Hordge is a devoted individual who finds immense joy in her relationships with family and friends. Her love for them is unwavering, and she can 
-        often be found celebrating life's moments and providing unwavering support in every aspect of their lives. Beyond her close connections, Shanique has a 
-        passion for travel, exploring numerous clandestined locales during her scheduled vacations. Amid her diverse hobbies, she cherishes the simplicity of 
-        sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
-        reflecting her dedication to the activities that bring her joy. 
-    </p>
-    <img src="C:\Users\dmonr\Downloads\Hobbies1.jpg" alt="Hobby 1">
-    <img src="C:\Users\dmonr\Downloads\Hobbies2.jpg" alt="Hobby 2">
-    <img src="C:\Users\dmonr\Downloads\Hobbies3.jpg" alt="Hobby 3">
-    <p>
-        If you're interested in learning more, feel free to visit my <a href="Monroe_bioSite.html">bioSite</a>.
-    </p>
+    <header>
+        <h1>While Shanique has numerous things enjoys in her daily life, these are some of the things she enjoys most.
+    </header>
+
+    <main>
+        <h1>Shanique's Hobbies</h1>
+        <p>
+            Shanique Hordge is a devoted individual who finds immense joy in her relationships with family and friends. Her love for them is unwavering, and she can 
+            often be found celebrating life's moments and providing unwavering support in every aspect of their lives. Beyond her close connections, Shanique has a 
+            passion for travel, exploring numerous clandestined locales during her scheduled vacations. Amid her diverse hobbies, she cherishes the simplicity of 
+            sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
+            reflecting her dedication to the activities that bring her joy. 
+        </p>
+        <img src="C:\Users\dmonr\Downloads\Hobbies1.jpg" alt="Hobby 1">
+        <img src="C:\Users\dmonr\Downloads\Hobbies2.jpg" alt="Hobby 2">
+        <img src="C:\Users\dmonr\Downloads\Hobbies3.jpg" alt="Hobby 3">
+        <p>
+            If you're interested in learning more, feel free to visit my <a href="Monroe_bioSite.html">bioSite</a>.
+        </p>
+    </main>
+
+    <footer>
+        <p>We have reached the end of this minute scope of the life of Mrs. Shanique Hordge-Monroe. Thank you for your time.</p>
+    </footer>
 </body>
 </html>
-
-
-
-
-
-
