--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -56,11 +56,11 @@
     <main>
         <h1>Shanique's Hobbies</h1>
         <p>
-            Shanique Hordge is a devoted individual who finds immense joy in her relationships with family and friends. Her love for them is unwavering; she can 
-            often be found celebrating life's moments and providing unwavering support in every aspect of their lives. Beyond her close connections, Shanique has a 
-            passion for travel, exploring numerous clan-destined locales during her scheduled vacations. Amid her diverse hobbies, she cherishes the simplicity of 
-            sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
-            reflecting her dedication to the activities that bring her joy. 
+            Shanique Hordge is a devoted individual who finds immense joy in her relationships with family and friends. Her love for them is unwavering; 
+    she can often celebrate life's moments and provide unwavering support in every aspect of their lives. Beyond her close connections, Shanique has a 
+    passion for travel, exploring numerous clan-destined locales during her scheduled vacations. Amid her diverse hobbies, she cherishes the simplicity of 
+    sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
+    reflecting her dedication to the activities that bring her joy. 
         </p>
         <img src="C:\Users\dmonr\Downloads\Hobbies1.jpg" alt="Hobby 1">
         <img src="C:\Users\dmonr\Downloads\Hobbies2.jpg" alt="Hobby 2">
