--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -50,17 +50,17 @@
 </head>
 <body>
     <header>
-        <h1>While Shanique has numerous things enjoys in her daily life, these are some of the things she enjoys most.
+        <h1>While there are many things Shanique enjoys, these are things that are special to her heart.</h1>
     </header>
 
     <main>
         <h1>Shanique's Hobbies</h1>
         <p>
-            Shanique Hordge is a devoted individual who finds immense joy in her relationships with family and friends. Her love for them is unwavering; 
-    she can often celebrate life's moments and provide unwavering support in every aspect of their lives. Beyond her close connections, Shanique has a 
-    passion for travel, exploring numerous clan-destined locales during her scheduled vacations. Amid her diverse hobbies, she cherishes the simplicity of 
-    sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
-    reflecting her dedication to the activities that bring her joy. 
+            Shanique Hordge is a devoted individual who finds immense joy in her relationships with family and friends. Her love for them is unwavering; she can 
+            often be found celebrating life's moments and providing unwavering support in every aspect of their lives. Beyond her close connections, Shanique has a 
+            passion for travel, exploring numerous clan-destined locales during her scheduled vacations. Amid her diverse hobbies, she cherishes the simplicity of 
+            sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
+            reflecting her dedication to the activities that bring her joy. 
         </p>
         <img src="C:\Users\dmonr\Downloads\Hobbies1.jpg" alt="Hobby 1">
         <img src="C:\Users\dmonr\Downloads\Hobbies2.jpg" alt="Hobby 2">
@@ -71,7 +71,7 @@
     </main>
 
     <footer>
-        <p>We have reached the end of this minute scope of the life of Mrs. Shanique Hordge-Monroe. Thank you for your time.</p>
+        <p>I would like to personally thank you for taking the time to view this site. </p>
     </footer>
 </body>
 </html>
