--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Shanique Hordge</title>
-    <link rel="stylesheet" href="Monroe_bioSite.css"> <!-- Add this line to link the CSS file -->
+    <link rel="stylesheet" href="Monroe_bioSite.css"> 
     <style>
-        /* Your inline styles can go here if needed */
+        
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
