--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Shanique Hordge</title>
     <link rel="stylesheet" href="Monroe_bioSite.css"> 
+    <link rel="index" href="index.html">
     <style>
         
         body {
