--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shanique's Hobbies</title>
-    <link rel="stylesheet" href="Monroe_bioSite.css"> 
+    <link rel="stylesheet" href="Monroe_bioSite.css">
+    <link rel="index" href="index.html">
     <style>
        
         body {
