--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1>Thank you for visiting!</h1>
         
         <!-- Add your hosted image here -->
-        <img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Thank You Photo">
+        <img src="https://www.facebook.com/photo.php?fbid=2308142869244241&set=t.100001456506551&type=3" alt="Facebook.com">
 
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
