--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -63,9 +63,9 @@
             sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
             reflecting her dedication to the activities that bring her joy. 
         </p>
-        <img src="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3" alt="Facebook.com">
-        <img src="https://www.facebook.com/photo.php?fbid=5231763550215477&set=pb.100001456506551.-2207520000&type=3" alt="Facebook.com">
-        <img src="https://www.facebook.com/photo.php?fbid=5231762650215567&set=pb.100001456506551.-2207520000&type=3" alt="Facebook.com">
+        <img src="facebook.com" alt="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3">
+        <img src="facebook.com" alt="https://www.facebook.com/photo.php?fbid=5231763550215477&set=pb.100001456506551.-2207520000&type=3">
+        <img src="facebook.com" alt="https://www.facebook.com/photo.php?fbid=5231762650215567&set=pb.100001456506551.-2207520000&type=3">
         <p>
             If you're interested in learning more, feel free to visit my <a href="Monroe_bioSite.html">bioSite</a>.
         </p>
