--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -61,9 +61,9 @@
           to her commitment to continuous learning. Shanique is not only dedicated to her career but is also a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
           close ones. 
         </p>
-        <img src="https://www.facebook.com/photo.php?fbid=7102605339797946&set=pb.100001456506551.-2207520000&type=3" alt="Facebook.com">
-        <img src="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" alt="Facebook.com">
-        <img src="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" alt="Facebook.com">
+        <img src="facebook.com" alt="Fhttps://www.facebook.com/photo.php?fbid=7102605339797946&set=pb.100001456506551.-2207520000&type=3">
+        <img src="facebook.com" alt="">https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3
+        <img src="facebook.com" alt="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3">
         <p>
             For more information, please visit my <a href="Monroe_bioSite.html">bioSite</a>.
         </p>
