--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Shanique Hordge</title>
     <link rel="stylesheet" href="Monroe_bioSite.css"> 
-    <link rel="index" href="index.html">
     <style>
         
         body {
@@ -65,7 +64,7 @@
         <img src="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" alt="Img 2">
         <img src="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" alt="Img 3">
         <p>
-            For more information, please visit my <a href="Monroe_bioSite.html">bioSite</a>.
+            For more information, please visit my <a href="index.html">bioSite</a>.
         </p>
     </main>
 
