--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Shanique Hordge</title>
-    <link rel="stylesheet" href="Monroe_bioSite.css"> 
+    <link rel="stylesheet" href="bioSite.css"> 
     <style>
         
         body {
