--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shanique's Hobbies</title>
-    <link rel="stylesheet" href="Monroe_bioSite.css">
-    <link rel="index" href="index.html">
+    <link rel="stylesheet" href="bioSite.css">
+    
     <style>
        
         body {
@@ -63,11 +63,11 @@
             sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
             reflecting her dedication to the activities that bring her joy. 
         </p>
-        <img src="facebook.com" alt="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3">
-        <img src="facebook.com" alt="https://www.facebook.com/photo.php?fbid=5231763550215477&set=pb.100001456506551.-2207520000&type=3">
-        <img src="facebook.com" alt="https://www.facebook.com/photo.php?fbid=5231762650215567&set=pb.100001456506551.-2207520000&type=3">
+        <img src="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3" alt="Img 1">
+        <img src="https://www.facebook.com/photo.php?fbid=5231763550215477&set=pb.100001456506551.-2207520000&type=3" alt="Img 2">
+        <img src="https://www.facebook.com/photo.php?fbid=5231762650215567&set=pb.100001456506551.-2207520000&type=3" alt="Img 3">
         <p>
-            If you're interested in learning more, feel free to visit my <a href="Monroe_bioSite.html">bioSite</a>.
+            If you're interested in learning more, feel free to visit my <a href="index.html">bioSite</a>.
         </p>
     </main>
 
