--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monroe_bioSite</title>
     <link rel="stylesheet" href="Monroe_bioSite.css"> 
-     <link rel="About Me" href="Shanique_About.html"> 
-      <link rel="Hobbies" href="Shanique_Hobbies.html"> 
     <style>
        
         body {
@@ -67,7 +65,7 @@
         <h1>Thank you for visiting!</h1>
         
         <!-- Add your hosted image here -->
-        <img src="Facebook.com" alt="https://www.facebook.com/photo.php?fbid=2308142869244241&set=t.100001456506551&type=3">
+        <img src="https://www.facebook.com/photo.php?fbid=2308142869244241&set=t.100001456506551&type=3" alt="Img 1">
 
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
