--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -5,48 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Shanique Hordge</title>
     <link rel="stylesheet" href="bioSite.css"> 
-    <style>
-        
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        header, footer {
-            background-color: #007bff;
-            color: #ffffff;
-            padding: 10px;
-        }
-
-        h1 {
-            color: #007bff;
-        }
-
-        p {
-            margin: 20px 0;
-            text-align: left;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            margin: 10px auto; /* Center and add margin */
-            display: block;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  
 </head>
 <body>
     <header>
@@ -57,7 +16,7 @@
         <h1>About Shanique Hordge</h1>
         <p>
             Shanique Hordge, at the age of 28, stands as an educated and articulate individual, currently serving as a director for Catholic Charities. Balancing her professional commitments, she is a few hours away from completing her master’s degree—a testament 
-          to her commitment to continuous learning. Shanique is not only dedicated to her career but is also a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
+          to her commitment to continuous learning. Shanique is dedicated to her career and being a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
           close ones. 
         </p>
         <img src="https://www.facebook.com/photo.php?fbid=7102605339797946&set=pb.100001456506551.-2207520000&type=3" alt="Img 1">
