--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>YWelcome to the About Me portion of the site.</h1>
+        <h1>Welcome to the About Me portion of the site.</h1>
     </header>
 
     <main>
