--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -19,9 +19,15 @@
           to her commitment to continuous learning. Shanique is dedicated to her career and being a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
           close ones. 
         </p>
-        <img src="https://www.facebook.com/photo.php?fbid=7102605339797946&set=pb.100001456506551.-2207520000&type=3" alt="Img 1">
-        <img src="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" alt="Img 2">
-        <img src="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" alt="Img 3">
+       <a href="your_image_url.jpg" target="_blank">
+        <img src="your_image_url.jpg" alt="Description of the image">
+    </a>
+        <a href="your_image_url.jpg" target="_blank">
+        <img src="your_image_url.jpg" alt="Description of the image">
+    </a>
+        <a href="your_image_url.jpg" target="_blank">
+        <img src="your_image_url.jpg" alt="Description of the image">
+    </a>
         <p>
             For more information, please visit my <a href="index.html">bioSite</a>.
         </p>
