--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <h1>Thank you for visiting!</h1>
         
         
-        <img src="" alt="">
+        <a href="your_image_url.jpg" target="_blank">
+        <img src="your_image_url.jpg" alt="Description of the image">
+    </a>
 
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
