--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -23,10 +23,15 @@
             sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
             reflecting her dedication to the activities that bring her joy. 
         </p>
-        <img src="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3" alt="Img 1">
-        <img src="https://www.facebook.com/photo.php?fbid=5231763550215477&set=pb.100001456506551.-2207520000&type=3" alt="Img 2">
-        <img src="https://www.facebook.com/photo.php?fbid=5231762650215567&set=pb.100001456506551.-2207520000&type=3" alt="Img 3">
-        <p>
+       <a href="photos.html" target="_blank">
+        <img src="your_image_url.jpg" alt="Description of the image">
+    </a>
+        <a href="photos.html" target="_blank">
+        <img src="your_image_url.jpg" alt="Description of the image">
+    </a>
+        <a href="photos.html" target="_blank">
+        <img src="your_image_url.jpg" alt="Description of the image">
+    </a>
             If you're interested in learning more, feel free to visit my <a href="index.html">bioSite</a>.
         </p>
     </main>
