--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -19,13 +19,13 @@
           to her commitment to continuous learning. Shanique is dedicated to her career and being a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
           close ones. 
         </p>
-       <a href="your_image_url.jpg" target="_blank">
+       <a href="photos.html" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
-        <a href="your_image_url.jpg" target="_blank">
+        <a href="photos.html" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
-        <a href="your_image_url.jpg" target="_blank">
+        <a href="photos.html" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
         <p>
