--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     <main>
         <h1>Thank you for visiting!</h1>
         
-        
-        <a href="your_image_url.jpg" target="_blank">
+   <a href="photos.url" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
-
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
     </main>
