--- a/photos.html
+++ b/photos.html
@@ -2,27 +2,27 @@
         <img src="https://www.facebook.com/photo.php?fbid=7220426261349186&set=pb.100001456506551.-2207520000&type=3" alt="Shanique Hordge-Monroe">
     </a>
 
-<a href="your_image_url.jpg" target="_blank">
+<a href="photos.html" target="_blank">
+        <img src="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" alt="Baby Shower (Mom, Dad, Brother, Sisters">
+    </a>
+
+<a href="photos.html" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
 
-<a href="your_image_url.jpg" target="_blank">
+<a href="photos.html" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
 
-<a href="your_image_url.jpg" target="_blank">
+<a href="photos.html" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
 
-<a href="your_image_url.jpg" target="_blank">
+<a href="photos.html" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
 
-<a href="your_image_url.jpg" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
-    </a>
-
-<a href="your_image_url.jpg" target="_blank">
+<a href="photos.html" target="_blank">
         <img src="your_image_url.jpg" alt="Description of the image">
     </a>
     
