--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -19,15 +19,10 @@
           to her commitment to continuous learning. Shanique is dedicated to her career and being a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
           close ones. 
         </p>
-       <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
+      <a href="photos.html" target="_blank">
+        <img src="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" alt="Baby Shower (Mom, Dad, Brother, Sisters">
     </a>
-        <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
-    </a>
-        <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
-    </a>
+        
         <p>
             For more information, please visit my <a href="index.html">bioSite</a>.
         </p>
