--- a/photos.html
+++ b/photos.html
@@ -7,7 +7,7 @@
     </a>
 
 <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
+        <img src="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" alt="Baby Shower (Nieces, Nephews">
     </a>
 
 <a href="photos.html" target="_blank">
