--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -22,7 +22,10 @@
       <a href="photos.html" target="_blank">
         <img src="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" alt="Baby Shower (Mom, Dad, Brother, Sisters">
     </a>
-        
+        <a href="photos.html" target="_blank">
+        <img src="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" alt="Baby Shower (Nieces, Nephews">
+    </a>
+
         <p>
             For more information, please visit my <a href="index.html">bioSite</a>.
         </p>
