--- a/photos.html
+++ b/photos.html
@@ -11,7 +11,7 @@
     </a>
 
 <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
+        <img src="https://www.facebook.com/photo.php?fbid=4672864836105354&set=pb.100001456506551.-2207520000&type=3" alt="Graduation (Grandparents)">
     </a>
 
 <a href="photos.html" target="_blank">
