--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -25,6 +25,9 @@
         <a href="photos.html" target="_blank">
         <img src="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" alt="Baby Shower (Nieces, Nephews">
     </a>
+<a href="photos.html" target="_blank">
+        <img src="https://www.facebook.com/photo.php?fbid=4672864836105354&set=pb.100001456506551.-2207520000&type=3" alt="Graduation (Grandparents)">
+    </a>
 
         <p>
             For more information, please visit my <a href="index.html">bioSite</a>.
