--- a/photos.html
+++ b/photos.html
@@ -15,7 +15,7 @@
     </a>
 
 <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
+        <img src="https://www.facebook.com/photo.php?fbid=3117680248290495&set=pb.100001456506551.-2207520000&type=3" alt="Out on the Lake">
     </a>
 
 <a href="photos.html" target="_blank">
