--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -23,15 +23,10 @@
             sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
             reflecting her dedication to the activities that bring her joy. 
         </p>
-       <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
+      <a href="photos.html" target="_blank">
+        <img src="https://www.facebook.com/photo.php?fbid=3117680248290495&set=pb.100001456506551.-2207520000&type=3" alt="Out on the Lake">
     </a>
-        <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
-    </a>
-        <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
-    </a>
+       
             If you're interested in learning more, feel free to visit my <a href="index.html">bioSite</a>.
         </p>
     </main>
