--- a/photos.html
+++ b/photos.html
@@ -19,7 +19,7 @@
     </a>
 
 <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
+        <img src="https://www.facebook.com/photo.php?fbid=5231765133548652&set=pb.100001456506551.-2207520000&type=3" alt="St Croix (Aunt, Mom)">
     </a>
 
 <a href="photos.html" target="_blank">
