--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -26,6 +26,9 @@
       <a href="photos.html" target="_blank">
         <img src="https://www.facebook.com/photo.php?fbid=3117680248290495&set=pb.100001456506551.-2207520000&type=3" alt="Out on the Lake">
     </a>
+        <a href="photos.html" target="_blank">
+        <img src="https://www.facebook.com/photo.php?fbid=5231765133548652&set=pb.100001456506551.-2207520000&type=3" alt="St Croix (Aunt, Mom)">
+    </a>
        
             If you're interested in learning more, feel free to visit my <a href="index.html">bioSite</a>.
         </p>
