--- a/photos.html
+++ b/photos.html
@@ -23,6 +23,6 @@
     </a>
 
 <a href="photos.html" target="_blank">
-        <img src="your_image_url.jpg" alt="Description of the image">
+        <img src="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3" alt="Vacation (Best Friends)">
     </a>
     
