--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -29,7 +29,9 @@
         <a href="photos.html" target="_blank">
         <img src="https://www.facebook.com/photo.php?fbid=5231765133548652&set=pb.100001456506551.-2207520000&type=3" alt="St Croix (Aunt, Mom)">
     </a>
-       
+       <a href="photos.html" target="_blank">
+        <img src="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3" alt="Vacation (Best Friends)">
+    </a>
             If you're interested in learning more, feel free to visit my <a href="index.html">bioSite</a>.
         </p>
     </main>
