--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -19,14 +19,14 @@
           to her commitment to continuous learning. Shanique is dedicated to her career and being a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
           close ones. 
         </p>
-      <a href="photos.html" target="_blank">
-        <img src="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" alt="Baby Shower (Mom, Dad, Brother, Sisters">
+      <a href="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+        <img src="photos.html" alt="Baby Shower (Mom, Dad, Brother, Sisters)">
     </a>
-        <a href="photos.html" target="_blank">
-        <img src="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" alt="Baby Shower (Nieces, Nephews">
+        <a href="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+        <img src="photos.html" alt="Baby Shower (Nieces, Nephews)">
     </a>
 <a href="photos.html" target="_blank">
-        <img src="https://www.facebook.com/photo.php?fbid=4672864836105354&set=pb.100001456506551.-2207520000&type=3" alt="Graduation (Grandparents)">
+        <img src="" alt="Graduation (Grandparents)">
     </a>
 
         <p>
