--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -25,8 +25,8 @@
         <a href="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" target="_blank">
         <img src="photos.html" alt="Baby Shower (Nieces, Nephews)">
     </a>
-<a href="photos.html" target="_blank">
-        <img src="" alt="Graduation (Grandparents)">
+<a href="https://www.facebook.com/photo.php?fbid=4672864836105354&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+        <img src="photos.html" alt="Graduation (Grandparents)">
     </a>
 
         <p>
