--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -23,14 +23,14 @@
             sitting by the water, whether that be swimming or finding solace in the peaceful act of fishing. Shanique proudly boasts about being a master fisherman, 
             reflecting her dedication to the activities that bring her joy. 
         </p>
-      <a href="photos.html" target="_blank">
-        <img src="https://www.facebook.com/photo.php?fbid=3117680248290495&set=pb.100001456506551.-2207520000&type=3" alt="Out on the Lake">
+      <a href="https://www.facebook.com/photo.php?fbid=3117680248290495&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+        <img src="photos.html" alt="Out on the Lake">
     </a>
-        <a href="photos.html" target="_blank">
-        <img src="https://www.facebook.com/photo.php?fbid=5231765133548652&set=pb.100001456506551.-2207520000&type=3" alt="St Croix (Aunt, Mom)">
+        <a href="https://www.facebook.com/photo.php?fbid=5231765133548652&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+        <img src="photos.html" alt="St Croix (Aunt, Mom)">
     </a>
-       <a href="photos.html" target="_blank">
-        <img src="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3" alt="Vacation (Best Friends)">
+       <a href="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+        <img src="photos.html" alt="Vacation (Best Friends)">
     </a>
             If you're interested in learning more, feel free to visit my <a href="index.html">bioSite</a>.
         </p>
