--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
         <h1>Thank you for visiting!</h1>
         
-   <a href="photos.url" target="_blank">
-        <img src="https://www.facebook.com/photo.php?fbid=7220426261349186&set=pb.100001456506551.-2207520000&type=3" alt="Shanique Horgde-Monroe">
+   <a href="https://www.facebook.com/photo.php?fbid=7220426261349186&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+        <img src="photos.html" alt="Shanique Horgde-Monroe">
     </a>
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
