--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monroe_bioSite</title>
-   
-   
+    <link rel="stylesheet" href="Monroe_bioSite.css">
 </head>
-     
+
 <body>
     <header>
-         <link rel="stylesheet" href="Monroe_bioSite.css">
         <h1>Welcome, to the home page.</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Shanique_About.html">About</a></li>
+                <li><a href="Shanique_Hobbies.html">Hobbies</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <h1>Thank you for visiting!</h1>
-        
-   <a href="https://www.facebook.com/photo.php?fbid=7220426261349186&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-        <img src="photos.html" alt="Shanique Horgde-Monroe">
-    </a>
+        <h2>Thank you for visiting!</h2>
+
+        <a href="https://www.facebook.com/photo.php?fbid=7220426261349186&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+            <img src="photos.html" alt="Shanique Horgde-Monroe">
+        </a>
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
     </main>
 
     <footer>
-        <p>Thank you for taking the time to get a little about Shanique Hordge-Monroe</p>
+        Thank you for taking the time to get a little about Shanique Hordge-Monroe.
     </footer>
 </body>
+
 </html>
+
