--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -5,29 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Shanique Hordge</title>
     <link rel="stylesheet" href="bioSite.css"> 
-  
 </head>
 <body>
     <header>
         <h1>Welcome to the About Me portion of the site.</h1>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Shanique_About.html">About</a></li>
+            <li><a href="Shanique_Hobbies.html">Hobbies</a></li>
+        </ul>
+    </nav>
+
     <main>
-        <h1>About Shanique Hordge</h1>
+        <h2>About Shanique Hordge</h2>
         <p>
-            Shanique Hordge, at the age of 28, stands as an educated and articulate individual, currently serving as a director for Catholic Charities. Balancing her professional commitments, she is a few hours away from completing her master’s degree—a testament 
-          to her commitment to continuous learning. Shanique is dedicated to her career and being a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
-          close ones. 
+            Shanique Hordge, at 28, is an educated and articulate individual, currently serving as a director for Catholic Charities. Balancing her professional commitments, she is a few hours away from completing her master’s degree—a testament 
+            to her commitment to continuous learning. Shanique is dedicated to her career and being a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
+            close ones. 
         </p>
-      <a href="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-        <img src="photos.html" alt="Baby Shower (Mom, Dad, Brother, Sisters)">
-    </a>
+        <a href="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+            <img src="photos.html" alt="Baby Shower (Mom, Dad, Brother, Sisters)">
+        </a>
         <a href="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-        <img src="photos.html" alt="Baby Shower (Nieces, Nephews)">
-    </a>
-<a href="https://www.facebook.com/photo.php?fbid=4672864836105354&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-        <img src="photos.html" alt="Graduation (Grandparents)">
-    </a>
+            <img src="photos.html" alt="Baby Shower (Nieces, Nephews)">
+        </a>
+        <a href="https://www.facebook.com/photo.php?fbid=4672864836105354&set=pb.100001456506551.-2207520000&type=3" target="_blank">
+            <img src="photos.html" alt="Graduation (Grandparents)">
+        </a>
 
         <p>
             For more information, please visit my <a href="index.html">bioSite</a>.
@@ -35,12 +42,10 @@
     </main>
 
     <footer>
-        <p>There's more to share, just head over to My Hobbies!</p>
+        <p>There's more to share, head over to My Hobbies!</p>
     </footer>
 </body>
 </html>
-
-
 
 
 
